# crewai-plus-crash-course

./: README.md  landing_page.html  landing_page_review.md  pyproject.toml
src/landing_page_reviewer/: crew.py  main.py
src/landing_page_reviewer/config/: agents.yaml  tasks.yaml
src/landing_page_reviewer/tools/: FetchHTMLTool.py
